--- a/backend/package.json
+++ b/backend/package.json
@@ -11,9 +11,13 @@
   "license": "ISC",
   "dependencies": {
     "@fastify/cors": "^9.0.1",
+    "@prisma/client": "^5.9.1",
     "@types/node": "^20.11.16",
     "fastify": "^4.26.0",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "prisma": "^5.9.1"
   }
 }
